# tisdemos

autosar/: Makefile
autosar/ppt/: autosar.pptx
autosar/v1/: ConsumptionApplication.c
autosar/v1/trustinsoft/: Rte_DataHandleType.h  config.json  config.json.bak  rte_stubs.c
autosar/v2/: ConsumptionApplication.arxml  ConsumptionApplication.c
autosar/v2/trustinsoft/: ConsumptionApplication_MemMap.h
autosar/v3/: ConsumptionApplication.c  Makefile
autosar/v3/trustinsoft/: .tis  Rte_ConsumptionApplication.h  Rte_ConsumptionApplication_Type.h  Rte_Type.h  config.json  persistent_config.json
main-demo/: test_driver.c
unity-main/: CMakeLists.txt  Makefile  README.md  test_driver.c  unity_config.h
unity-main/trustinsoft/: .gitignore  .tis  .tis_symbols.tbl  config.json  parsing-options.json  perimeter-files.json  prepare.sh
